--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,3 +200,102 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+ /*media-queries*/
+
+@media screen and (max-width: 980px) and (min-width: 768px) {
+
+  .container {
+    margin: 0 auto;
+    max-width: 980px;
+    width: 75%;
+    }
+
+  .main-section {
+    max-width: 980px;
+    width: 75%;
+    }
+
+  .sidebar {
+    max-width: 768px;
+    width: 100%;
+
+   }
+   
+}
+
+ 
+          
+
+@media screen and (max-width: 768px) and (min-width: 640px)  {
+
+
+  .container {
+      max-width: 768px;
+      width :70%;
+ }
+
+  .main-section {
+    max-width: 768px;
+    width: 70%;
+    float: none;
+    margin: 0 auto;
+    clear: both;
+   
+ }
+
+ .sidebar {
+   max-width: 768px;
+   width: 100%;
+   float: none;
+   margin: 0 auto;
+   clear: both;
+  }
+
+ }
+
+
+
+@media screen and (max-width: 640px) and (min-width: 0px) {
+
+ .container {
+   margin: 0 auto;
+   max-width: 640px;
+ }
+
+ .main-section {
+   width: 90%;
+   float: none;
+   margin: 0 auto;
+   clear: both;
+ }
+
+ .sidebar {
+   max-width: 100%;
+   width: 90%;
+   float: none;
+   margin: 0 auto;
+ }
+
+ #masthead {
+   width: 100%;
+ }
+
+ #logo {
+   width: 100%;
+   text-align: center;
+ }
+
+ nav {
+   clear: both;
+   width: 100%;
+   text-align: center;
+ }
+
+}
+     
+               
+ 
+
+
+
